Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6379327.out
T6379327.java:19:11: compiler.err.except.never.thrown.in.try: java.lang.ClassNotFoundException
1 error
